Fix layout issues
Layout was not filling full height

--- a/pure-flex/style.css
+++ b/pure-flex/style.css
@@ -18,6 +18,7 @@ body {
   display: flex;
   flex-direction: row;
   overflow: auto;
+  flex-grow: 1;
 }
 
 .x-sidebar {
